--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
+    <header>ALURAFLIX</header>
     <section>
-        <div>
-            <header>ALURAFLIX</header>
+        <div class="chamada-texto">
             <h1>50 Tons de Cinza</h1>
+            <p>As Aventuras de um homem e uma mulher apaixonados</p>
         </div>
         <div>
-            <p>As Aventuras de um homem e uma mulher apaixonados</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/g_eYYpYWAcU?si=PMoBe2L692WWSYrM"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
